unpackaged/main/default/objects/loan__Loan_Account_Conditions__c/loan__Loan_Account_Conditions__c.object-meta.xml
<CustomObject>
    <label>Conditions</label>
    <nameField>
        <displayFormat>LACI-{0000000000}</displayFormat>
        <label>Loan Account Conditions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>