unpackaged/main/default/objects/loan__Loan_Account_Conditions__c/fields/loan__Action__c.field-meta.xml
<CustomField>
    <fullName>loan__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queue/Condition Request</fullName>
                <default>true</default>
                <label>Queue/Condition Request</label>
            </value>
            <value>
                <fullName>Customer Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>