unpackaged/main/default/objects/loan__Loan_Account_Conditions__c/fields/loan__End_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>