unpackaged/main/default/objects/loan__Loan_Account_Conditions__c/fields/loan__Loan__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan__c</fullName>
    <label>Loan</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipName>Loan_Account_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>