unpackaged/main/default/objects/loan__Loan_Account_Conditions__c/fields/loan__Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Reason_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>loan__Lookup__c.loan__Lookup_Sub_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.loan__Result__c</valueField>
        </filterItems>
        <filterItems>
            <field>loan__Lookup__c.loan__Lookup_Type__c</field>
            <operation>equals</operation>
            <value>CRB_CONDITION_REASON_CD</value>
        </filterItems>
        <filterItems>
            <field>loan__Lookup__c.loan__Enabled_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__Lookup__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Loan_Account_Conditions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>