unpackaged/main/default/objects/loan__Loan_Account_Conditions__c/fields/loan__Result__c.field-meta.xml
<CustomField>
    <fullName>loan__Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>loan__Action__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Open Special Condition(METRO2)</fullName>
                <default>true</default>
                <label>Open Special Condition(METRO2)</label>
            </value>
            <value>
                <fullName>Open Consumer Information(METRO2)</fullName>
            </value>
            <value>
                <fullName>Open Compliance Condition(METRO2)</fullName>
            </value>
            <value>
                <fullName>Stop Credit Bureau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>