unpackaged/main/default/objects/loan__Loan_Account_Conditions__c/fields/loan__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>