unpackaged/main/default/objects/loan__Loan_Account_Conditions__c/recordTypes/Loan.recordType-meta.xml
<RecordType>
    <fullName>Loan</fullName>
    <active>true</active>
    <label>Loan</label>
</RecordType>